# P

./: config.py  cookies.txt  information.py  main.py  pyproject.toml  r3d.txt  render.yaml  requirements.txt
Plugins/: ai_groq.py  all.py  antiselfkill.py  azan.py  cleaner.py  customCommad.py  customFilter.py  customRank.py  custom_plugin.py  del_ranks.py  downloader.py  fun.py  games.py  get_ranks.py  globalFilters.py  id.py  information.py  mute_and_gban.py  private&sudos.py  replace.py  sarhni.py  set_ranks.py  welcome_and_rules.py  whisper.py
helpers/: games.py  get_create.py
